--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^0.22.0 # help us to use SVG in our appdev_dependencies:
   flutter_test:
     sdk: flutter
+  lottie: ^1.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
